--- a/Cinema_Project/Views/Actors/Index.cshtml
+++ b/Cinema_Project/Views/Actors/Index.cshtml
@@ -32,9 +32,9 @@
                         <td class="align-middle">@Html.DisplayFor(modelItem => item.FullName)</td>
                         <td class="align-middle">@Html.DisplayFor(modelItem => item.Bio)</td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square">Edit</i></a>
-                            <a class="btn btn-outline-info"><i class="bi bi-eye">Details</i></a>
-                            <a class="btn btn-danger text-white"><i class="bi bi-trash">Delete</i></a>
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square">Edit</i></a>
+                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye">Details</i></a>
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash">Delete</i></a>
                         </td>
                     </tr>
                 }
@@ -44,5 +44,12 @@
         </table>
 
     </div>
+
+</div>
+
+
+<div style="position:fixed; right:25px; bottom:25px;" class="text-white">
+
+    <a asp-controller="Actors" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add New</a>
 
 </div>
